syntax = "proto3";

package currency;

option go_package = "server/internal/infrastructure/messaging/dto";

message Currency {
  uint32 id = 1;
  string name = 2;
  string symbol = 3;
  uint32 decimal_points = 4;
}

message GetAllCurrenciesRequest {
}

message GetAllCurrenciesResponse {
  repeated Currency currencies = 1;
}

message CreateCurrencyRequest {
  string name = 1;
  string symbol = 2;
  uint32 decimal_points = 3;
}

message CreateCurrencyResponse {
  uint32 id = 1;
}

message UpdateCurrencyRequest {
  Currency currency = 1;
}

message UpdateCurrencyResponse {

}

service CurrencyService {
  rpc GetAllCurrencies (GetAllCurrenciesRequest) returns (GetAllCurrenciesResponse);
  rpc CreateCurrency (CreateCurrencyRequest) returns (CreateCurrencyResponse);
  rpc UpdateCurrency (UpdateCurrencyRequest) returns (UpdateCurrencyResponse);
}
